--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "on-change": "^4.0.2"
+  },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.0.2",
     "eslint": "^8.40.0",
